--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <base href="/" />
     <meta charset="UTF-8">
     <title>Example - example-$route-service-production</title>
 
@@ -10,10 +11,6 @@
     <script src="//code.angularjs.org/1.7.8/angular-resource.js"></script>
     <script src="/script.js"></script>
 
-
-    <script type="text/javascript">
-       angular.element(document.getElementsByTagName('head')).append(angular.element('<base href="/" />'));
-    </script>
 </head>
 <body ng-app="app">
 <div ng-controller="MainController">
